@@ -1,2 +1,7 @@
 <% scope ||= nil %>
-<%= hidden_field :record, column.name, active_scaffold_input_options(column, scope) %>
+<dl style="display: none;">
+<dt></dt>
+<dd>
+  <%= hidden_field :record, column.name, active_scaffold_input_options(column, scope) %>
+</dd>
+</dl>
