@@ -2,7 +2,7 @@
   column = if render_field.is_a? ActiveScaffold::DataStructures::Column
     render_field
   else
-    active_scaffold_config.columns[render_field.to_sym] unless render_field.is_a? ActiveScaffold::DataStructures::Column
+    active_scaffold_config.columns[render_field.to_sym]
   end
   @rendered ||= Set.new
   return if @rendered.include? column.name
